--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,174 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Bungee&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  width: 100%;
   min-height: 100vh;
+  background-image: linear-gradient(to right top, #be6ed1, #c872cc, #d177c8, #d87cc4, #de82c1, #e386bd, #e88bb9, #eb90b6, #ee95b1, #f09aad, #f1a0aa, #f1a6a8);
+  background-repeat: no-repeat;
+}
+
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #17181e;
+  width: 100%;
+  margin: 40px 0;
+  border-radius: 20px;
+}
+
+.container h1 {
+  font-family: 'Bungee', cursive;
+  border-bottom: 1px solid #fff;
+  display: inline-block;
+}
+
+.container p {
+  font-family: 'Amatic SC', cursive;
+  letter-spacing: 2px;
+  font-size: 18px;
+}
+
+.search-bar {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: baseline;
+  width: 100%;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+.search-bar input {
+  width: 500px;
+  height: 40px;
+  border-radius: 7px;
+  padding: 0 20px;
+  border: none;
+  background-color: whitesmoke;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.search-bar input::placeholder {
+  text-align: center;
+  font-weight: bold;
+}
+
+.search-bar input:focus {
+  outline: none;
+  background-color: #17181e;
+  color: #fff;
+  border: 1px solid #ffff;
+}
+
+.search-bar button {
+  margin-left: 10px;
+  padding: 7px 20px;
+}
+
+.search-bar .btn-color {
+  background-image: linear-gradient(to right top, #be6ed1, #c872cc, #d177c8, #d87cc4, #de82c1, #e386bd, #e88bb9, #eb90b6, #ee95b1, #f09aad, #f1a0aa, #f1a6a8);
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.search-bar .btn-color:active {
+  transform: scale(0.95);
+  transition: 0.3s;
+}
+
+.task-li-s {
+  background-color: whitesmoke;
+  margin: 50px 0;
+  border-radius: 10px;
+  width: 75%;
+  box-shadow: rgba(255, 255, 255, 0.8) 0px 2px 8px 0px;
+}
+
+.li-lists {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  background-color: #17181e;
+  color: #fff;
+  width: 90%;
+  margin-top: 15px;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+.li-lists span {
+  font-size: 25px;
+}
+
+.li-divs {
+  padding: 0;
+}
+
+.li-divs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.li-lists li {
+  list-style-type: none;
+  text-align: left;
+  margin-left: 10px;
+  font-size: 22px;
+}
+
+.li-btns button {
+  margin-left: 5px;
+}
+
+.strike-out {
+  text-decoration: line-through;
+  text-decoration-color: red;
+  text-decoration-thickness: 3px;
+}
+
+.display {
+  display: none;
+}
+
+@media (min-width: 300px) and (max-width:585px) {
+  .container {
+    width: 90% !important;
   }
-  to {
-    transform: rotate(360deg);
+
+  .container p {
+    width: 90%;
+  }
+
+  .search-bar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .search-bar input {
+    width: 95%;
+    margin: 0 auto;
+  }
+
+  .search-bar .btn-color {
+    margin-top: 15px;
+  }
+
+  .li-lists {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .li-lists button {
+    margin-top: 10px;
   }
 }
